<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Subte.io</string>

    <!-- Menu items -->
    <string name="action_settings">Settings</string>

    <!-- Drawer menu -->
    <string name="title_section_estado">Estado</string>
    <string name="title_section_mapa">Mapa</string>
    <string name="title_section_acerca">Acerca de esta aplicación</string>

    <!-- Status View -->
    <string name="title_detail_view">Horarios de servicio</string>

    <string name="title_cabeceras">Cabeceras</string>
    <string name="title_dias_habiles">Lunes a Sábado</string>
    <string name="title_dias_no_habiles">Domingo</string>

    <string name="primero">Primero</string>
    <string name="ultimo">Último</string>

    <!-- Error Message -->
    <string name="network_error">Ha ocurrido un error al intentar actualizar los datos. Asegúrate de estar conectado a internet.</string>

    <!-- Cabecera linea A -->
    <string name="cabecera_start_linea_a">San Pedrito</string>
    <string name="cabecera_end_linea_a">Plaza de Mayo</string>
    <string name="cabecera_time_linea_a">26 minutos</string>

    <!-- Días Hábiles -->
    <string name="cabecera_start_linea_a_primer_tren_habil">05.00</string>
    <string name="cabecera_start_linea_a_ultimo_tren_habil">22.28</string>

    <!-- DOM/Fer -->
    <string name="cabecera_start_linea_a_primer_tren_dom">08.00</string>
    <string name="cabecera_start_linea_a_ultimo_tren_dom">22.08</string>

    <!-- Días Hábiles -->
    <string name="cabecera_end_linea_a_primer_tren_habil">05.00</string>
    <string name="cabecera_end_linea_a_ultimo_tren_habil">22.56</string>

    <!-- DOM/Fer -->
    <string name="cabecera_end_linea_a_primer_tren_dom">08.00</string>
    <string name="cabecera_end_linea_a_ultimo_tren_dom">22.36</string>


    <!-- Cabecera linea B -->
    <string name="cabecera_start_linea_b">J.M Rosas</string>
    <string name="cabecera_end_linea_b">Alem</string>
    <string name="cabecera_time_linea_b">27 minutos</string>

    <!-- Días Hábiles -->
    <string name="cabecera_start_linea_b_primer_tren_habil">05.00</string>
    <string name="cabecera_start_linea_b_ultimo_tren_habil">22.21</string>

    <!-- DOM/Fer -->
    <string name="cabecera_start_linea_b_primer_tren_dom">08.00</string>
    <string name="cabecera_start_linea_b_ultimo_tren_dom">22.00</string>

    <!-- Días Hábiles -->
    <string name="cabecera_end_linea_b_primer_tren_habil">05.00</string>
    <string name="cabecera_end_linea_b_ultimo_tren_habil">22.49</string>

    <!-- DOM/Fer -->
    <string name="cabecera_end_linea_b_primer_tren_dom">08.00</string>
    <string name="cabecera_end_linea_b_ultimo_tren_dom">22.08</string>

    <!-- Cabecera linea C -->
    <string name="cabecera_start_linea_c">Constitucióno</string>
    <string name="cabecera_end_linea_c">Retiro</string>
    <string name="cabecera_time_linea_c">13 minutos</string>

    <!-- Días Hábiles -->
    <string name="cabecera_start_linea_c_primer_tren_habil">05.00</string>
    <string name="cabecera_start_linea_c_ultimo_tren_habil">22.45</string>

    <!-- DOM/Fer -->
    <string name="cabecera_start_linea_c_primer_tren_dom">08.00</string>
    <string name="cabecera_start_linea_c_ultimo_tren_dom">22.21</string>

    <!-- Días Hábiles -->
    <string name="cabecera_end_linea_c_primer_tren_habil">05.00</string>
    <string name="cabecera_end_linea_c_ultimo_tren_habil">22.47</string>

    <!-- DOM/Fer -->
    <string name="cabecera_end_linea_c_primer_tren_dom">08.00</string>
    <string name="cabecera_end_linea_c_ultimo_tren_dom">22.23</string>

    <!-- Cabecera linea D -->
    <string name="cabecera_start_linea_d">C. de Tucumán</string>
    <string name="cabecera_end_linea_d">Catedral</string>
    <string name="cabecera_time_linea_d">26 minutos</string>

    <!-- Días Hábiles -->
    <string name="cabecera_start_linea_d_primer_tren_habil">05.00</string>
    <string name="cabecera_start_linea_d_ultimo_tren_habil">22.24</string>

    <!-- DOM/Fer -->
    <string name="cabecera_start_linea_d_primer_tren_dom">08.00</string>
    <string name="cabecera_start_linea_d_ultimo_tren_dom">22.00</string>

    <!-- Días Hábiles -->
    <string name="cabecera_end_linea_d_primer_tren_habil">05.00</string>
    <string name="cabecera_end_linea_d_ultimo_tren_habil">22.51</string>

    <!-- DOM/Fer -->
    <string name="cabecera_end_linea_d_primer_tren_dom">08.00</string>
    <string name="cabecera_end_linea_d_ultimo_tren_dom">22.28</string>

    <!-- Cabecera linea E -->
    <string name="cabecera_start_linea_e">P. Virreyes</string>
    <string name="cabecera_end_linea_e">Bolivar</string>
    <string name="cabecera_time_linea_e">24 minutos</string>

    <!-- Días Hábiles -->
    <string name="cabecera_start_linea_e_primer_tren_habil">05.00</string>
    <string name="cabecera_start_linea_e_ultimo_tren_habil">22.27</string>

    <!-- DOM/Fer -->
    <string name="cabecera_start_linea_e_primer_tren_dom">08.00</string>
    <string name="cabecera_start_linea_e_ultimo_tren_dom">22.03</string>

    <!-- Días Hábiles -->
    <string name="cabecera_end_linea_e_primer_tren_habil">05.00</string>
    <string name="cabecera_end_linea_e_ultimo_tren_habil">22.59</string>

    <!-- DOM/Fer -->
    <string name="cabecera_end_linea_e_primer_tren_dom">08.00</string>
    <string name="cabecera_end_linea_e_ultimo_tren_dom">22.35</string>

    <!-- Cabecera linea H -->
    <string name="cabecera_start_linea_h">Hospitales</string>
    <string name="cabecera_end_linea_h">Corrientes</string>
    <string name="cabecera_time_linea_h">13 minutos</string>

    <!-- Días Hábiles -->
    <string name="cabecera_start_linea_h_primer_tren_habil">05.00</string>
    <string name="cabecera_start_linea_h_ultimo_tren_habil">23.06</string>

    <!-- DOM/Fer -->
    <string name="cabecera_start_linea_h_primer_tren_dom">08.00</string>
    <string name="cabecera_start_linea_h_ultimo_tren_dom">22.30</string>

    <!-- Días Hábiles -->
    <string name="cabecera_end_linea_h_primer_tren_habil">05.00</string>
    <string name="cabecera_end_linea_h_ultimo_tren_habil">23.02</string>

    <!-- DOM/Fer -->
    <string name="cabecera_end_linea_h_primer_tren_dom">08.00</string>
    <string name="cabecera_end_linea_h_ultimo_tren_dom">22.30</string>

    <!-- Cabezera linea P -->

    <!--
        Detalle Estación
    -->
    <string name="bus_lines_title">Colectivos Cercanos</string>
    <string name="other_lines_title">Otras líneas en esta estación</string>
    <string name="services_title">Servicios de la Estación</string>

    <string name="service_escalera">Escalera mecánica</string>
    <string name="service_ascensor">Ascensor</string>
    <string name="service_consulta">Terminal de consulta</string>
    <string name="service_wifi">Wifi</string>
    <string name="service_toilets">Baños</string>

    <!--
        Acerca De..
    -->
    <string name="title_desarrollado">Desarrollada por:</string>

    <!-- Dev list -->
    <string name="dev_1_name">Mariano</string>
    <string name="dev_1_twitter">"@xsincrueldadx"</string>

    <string name="dev_2_name">Emilio</string>
    <string name="dev_2_twitter">"@emiliovirtual"</string>

    <string name="dev_3_name">Ezequiel</string>
    <string name="dev_3_twitter">"@itswhoyall"</string>

    <!-- Textos a cambiar -->
    <string name="title_activity_detalle_linea">DetalleLineaActivity</string>
    <string name="title_activity_detalle_estacion">DetalleEstacion</string>
    <string name="hello_world">Hello world!</string>

</resources>
