<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="la.funka.subteio.DetalleLineaActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_list_margin"
            android:paddingRight="@dimen/activity_horizontal_list_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.Title"
                android:layout_marginBottom="8dp"
                android:text="@string/title_detail_view"/>

            <!-- Card con los horarios -->
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/station_item"
                android:layout_gravity="center_vertical"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_list_margin">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:useDefaultMargins="true"
                        android:alignmentMode="alignBounds"
                        android:columnOrderPreserved="false"
                        android:columnCount="4">

                        <!-- Row 1 -->
                        <TextView
                            android:text="@string/title_cabeceras"
                            style="@style/ItemTableTitle"
                            android:layout_columnSpan="2"
                            android:layout_gravity="center_horizontal"/>

                        <TextView android:text="@string/title_dias_habiles"
                            style="@style/ItemTableTitle"/>

                        <TextView android:text="@string/title_dias_no_habiles"
                            style="@style/ItemTableTitle" />

                        <!-- Row 2 -->
                        <TextView android:layout_columnSpan="2"
                            android:layout_gravity="center_horizontal"/>

                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:columnCount="2">

                            <TextView android:text="@string/primero"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable"/>

                            <TextView android:text="@string/ultimo"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable" />

                        </GridLayout>

                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:columnCount="2">

                            <TextView android:text="@string/primero"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable"/>

                            <TextView android:text="@string/ultimo"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable" />

                        </GridLayout>

                        <!-- Row DESDE - HORARIO-->
                        <TextView
                            android:layout_columnSpan="2"
                            android:paddingTop="8dp"
                            android:id="@+id/desde_cabecera"
                            android:layout_gravity="center_horizontal"/>

                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:useDefaultMargins="true"
                            android:alignmentMode="alignBounds"
                            android:columnOrderPreserved="false"
                            android:columnCount="2">

                            <TextView
                                android:id="@+id/desde_cabecera_primer_habil"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable"/>

                            <TextView
                                android:id="@+id/desde_cabecera_ultimo_habil"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable" />

                        </GridLayout>

                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:useDefaultMargins="true"
                            android:alignmentMode="alignBounds"
                            android:columnOrderPreserved="false"
                            android:columnCount="2">

                            <TextView
                                android:id="@+id/desde_cabecera_primer_dom"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable"/>

                            <TextView
                                android:id="@+id/desde_cabecera_ultimo_dom"
                                android:layout_gravity="center_horizontal"
                                style="@style/ItemTable" />

                        </GridLayout>

                        <!-- Row HASTA - HORARIO-->
                        <TextView
                            android:layout_columnSpan="2"
                            android:paddingTop="8dp"
                            android:id="@+id/hasta_cabecera"
                            android:layout_gravity="center_horizontal"/>

                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:useDefaultMargins="true"
                            android:alignmentMode="alignBounds"
                            android:columnOrderPreserved="false"
                            android:columnCount="2">

                            <TextView
                                android:id="@+id/hasta_cabecera_primero_habil"
                                style="@style/ItemTable"/>

                            <TextView
                                android:id="@+id/hasta_cabecera_ultimo_habil"
                                style="@style/ItemTable" />

                        </GridLayout>

                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:useDefaultMargins="true"
                            android:alignmentMode="alignBounds"
                            android:columnOrderPreserved="false"
                            android:columnCount="2">

                            <TextView
                                android:id="@+id/hasta_cabecera_primero_dom"
                                style="@style/ItemTable"/>

                            <TextView
                                android:id="@+id/hasta_cabecera_ultimo_dom"
                                style="@style/ItemTable" />

                        </GridLayout>

                    </GridLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viaje_total"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.Title"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/detalle_linea_name"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:id="@+id/listview"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>